--- a/main/src/frontend/src/scss/main.scss
+++ b/main/src/frontend/src/scss/main.scss
@@ -1,1 +1,89 @@
-// Empty for now just to initialize
+@use "/src/scss/color-palette.scss" as *;
+
+:root {
+  font-family: Roboto;
+}
+
+html, body, #app {
+  height: 100%;
+}
+
+div {
+  display: flex;
+  box-sizing: border-box;
+  flex-direction: column;
+}
+
+.page-title {
+  font-size: 19px;
+  font-weight: 600;
+  height: 100%;
+  justify-content: center;
+  color: $colorGray800;
+}
+
+.sub-title {
+  justify-content: center;
+  align-items: flex-start;
+  text-align: left;
+  height: 41px;
+  font-size: 11px;
+  color: $colorGray600;
+  font-weight: 600;
+}
+
+// ==============
+// TODO: CREATE A NEW COMPONENT
+// ==============
+.button.style1 {
+  flex-direction: row;
+  padding: 9px 16px;
+  justify-content: center;
+  align-items: center;
+  gap: 5.5px;
+  border-radius: 6px;
+  border: 1px solid #DDDDDD;
+
+  .button-icon {
+    width: 13.5px;
+    height: 13.5px;
+  }
+}
+
+// ==============
+// TODO: CREATE A NEW COMPONENT
+// ==============
+.button.style2 {
+  padding-left: 13px;
+  gap: 11px;
+  flex-direction: row;
+  align-items: center;
+  height: 58px;
+  border: 1px solid $colorBlue150;
+  border-radius: 7.5px;
+  background-color: $colorGray50;
+  font-weight: 700;
+  color: $colorGray700;
+  font-size: 13.5px;
+
+  .button-icon {
+    width: 30px;
+    height: 30px;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid $colorGray200;
+    border-radius: 5px;
+    font-weight: 400;
+  }
+}
+
+
+
+// debug
+// div {
+//   border: 1px dashed black;
+// }
+
+.button-icon {
+  border: 1px dashed black;
+}
