--- a/main/src/frontend/src/components/TemplateCanvas/TemplateCanvas.scss
+++ b/main/src/frontend/src/components/TemplateCanvas/TemplateCanvas.scss
@@ -1,5 +1,12 @@
 .template-canvas {
-  background-color: rgba(0,0,0,0.25);
-  width: 500px;
-  height: 400px;
+  background-color: white;
+  width: 400px;
+  height: 500px;
+  position: relative;
+  box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+  border-radius: 10px;
+}
+
+.canvas-element-wrapper {
+  position: absolute;
 }
