Create button component - InsiderButton variant1 variant2

--- a/main/src/frontend/src/pages/Template/Template.scss
+++ b/main/src/frontend/src/pages/Template/Template.scss
@@ -25,7 +25,7 @@
       width: 200px;
       border-right: 1px solid $colorGray200;
 
-      .elements-container {
+      .elements {
         gap: 8px;
       }
 
