--- a/main/src/frontend/src/components/canvasElements/CanvasElement.scss
+++ b/main/src/frontend/src/components/canvasElements/CanvasElement.scss
@@ -1,15 +1,29 @@
+$minWidth: 40px;
+$minHeight: 20px;
+
+:root {
+  --canvasElementMinWidth: #{$minWidth};
+  --canvasElementMinHeight: #{$minHeight};
+}
+
 .canvas-element {
   position: absolute;
   cursor: move;
   user-select: none;
-  min-width: 50px;
-  min-height: 30px;
+  width: 100%;
+  height: 100%;
 
   &.selected {
     outline: 2px solid #4a90d9;
   }
 
-  &.state-dragging-in-canvas {
+  &.dragging-out-canvas {
+    opacity: 0.15;
+    border: 1px solid black;
+  }
+
+  &.dragging-in-canvas {
+    opacity: 0.6;
     border: 1px solid black;
   }
 
@@ -48,23 +62,30 @@
 }
 
 .canvas-element-content {
-  min-width: 50px;
-  min-height: 30px;
   width: 100%;
   height: 100%;
-  display: flex;
   align-items: center;
   justify-content: center;
-  white-space: nowrap;
   overflow: hidden;
+}
 
+.canvas-element {
   &.image {
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: center;
+    .canvas-element-content {
+      background-size: contain;
+      background-repeat: no-repeat;
+      background-position: center;
+    }
   }
 
-  &:not(.image) {
-    padding: 8px 16px;
+  &:not(.image):not(.divider) {
+    min-width: $minWidth;
+    min-height: $minHeight;
+
+    .canvas-element-content {
+      min-width: $minWidth;
+      min-height: $minHeight;
+      padding: 8px 16px;
+    }
   }
 }
